fix max-width on wrap image

--- a/css/utils.css
+++ b/css/utils.css
@@ -57,6 +57,7 @@
   margin: 0 auto;
   align-items: center;
   width: fit-content;
+  max-width: 100%;
 }
 .wrapper-image-speech img {
   width: auto;
